# ShowdownBot

./: .gitattributes  .gitignore  CLAUDE.md  README.md  RESEARCH_SOURCES_ANALYSIS.md
showdown_bot/: .env.example  pyproject.toml
showdown_bot/config/analysis/: generalisation_policy_v1.yaml  speed_control_taxonomy_v1.yaml
showdown_bot/scripts/: build_decision_id_manifest.py  render_accuracy_gate_reports.py  render_cap_derisk_reports.py  run_accuracy_baseline_diff.py  run_accuracy_baseline_freeze.py  run_accuracy_gate_b.py  run_ambiguous_candidate_diagnostic.py  run_cap_action_capture.py  run_cap_cross_diffs.py  run_cap_gate_verdicts.py  run_cap_latency_sweep.py  run_champions_i8_microprofile.py  validate_cap4_auxiliary.py
showdown_bot/teams/: fixed_champions_v0.packed  fixed_champions_v0.txt  fixed_team.packed  fixed_team.txt  opp_variant_a.packed  opp_variant_a.txt  opp_variant_b.packed  opp_variant_b.txt
showdown_bot/tests/: conftest.py  test_accuracy_mode_wiring.py  test_actions.py  test_actions_force_phase.py  test_agg_teacher_join.py  test_aggregation_probe.py  test_aggregation_trace.py  test_atomic_publish_dir.py  test_audit_contracts.py  test_audit_distribution.py  test_audit_duplicates.py  test_audit_features.py  test_audit_integrity.py  test_audit_labels.py  test_audit_live_path_guard.py  test_audit_model.py  test_audit_report.py  test_audit_runner.py  test_baseline.py  test_baseline_eval.py  test_baseline_strength_holdout.py  test_baselines.py  test_battle_parse.py  test_battle_state.py  test_belief_builder.py  test_belief_tracker.py  test_cache_sizes.py  test_calc_client.py  test_calc_counters.py  test_calc_degradation_visibility.py  test_calc_persistent.py  test_calc_profile.py  test_calc_regi_parity.py  test_candidate_identity.py  test_champions_hp_suffix_state_parser.py  test_champions_i5_config_manifest.py  test_choose_dispatch_log.py  test_choose_line_result_path_pin.py  test_classify_game_mode.py  test_cli_coverage_gate.py  (+194 more)
showdown_bot/tools/: generate_packed_team.py
showdownbot_studio/python/: README.md  pyproject.toml
(+1315 files in other folders)
