[project]
name = "showdown-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "websockets>=12.0",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
# Offline/learning-only deps (reranker training + eval). NOT required for a live
# bot run — a normal run must never import lightgbm. Install: pip install -e ".[learning]".
learning = ["lightgbm>=4.0", "numpy>=1.24"]

[project.scripts]
showdown-bot = "showdown_bot.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["integration: live network tests"]
