[project]
name = "showdownbot-studio-exporter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "rfc8785==0.1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
showdownbot-studio-export = "showdownbot_studio_exporter.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["../tests/python"]
pythonpath = ["src"]
